updates paths and repo methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.h2.console.enabled=true
 spring.datasource.hikari.auto-commit=true
 spring.h2.console.path=/h2-console
 server.error.whitelabel.enable=false
+Dspring.devtools.restart.enabled=false
