--- a/src/test/resources/application-h2.properties
+++ b/src/test/resources/application-h2.properties
@@ -1,10 +1,15 @@
+server.error.whitelabel.enable=false
+
+#Spring H2 settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#Spring JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
 spring.datasource.hikari.auto-commit=true
-spring.h2.console.path=/h2-console
-server.error.whitelabel.enable=false
+
 Dspring.devtools.restart.enabled=false
