--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
+server.error.whitelabel.enable=false
+
+#Spring H2 settings
 spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
+spring.h2.console.path=/h2-console
+
+#Spring JPA settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movieshop
+spring.datasource.username=root
+spring.datasource.password=$hini!
+spring.datasource.hikari.auto-commit=true
+
+Dspring.devtools.restart.enabled=false
