--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.h2.console.path=/h2-console
 
 #Spring JPA settings
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movieshop
-spring.datasource.username=root
-spring.datasource.password=$hini!
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movies_shop
+spring.datasource.username=rajeh
+spring.datasource.password=
 spring.datasource.hikari.auto-commit=true
 
 Dspring.devtools.restart.enabled=false
