updates : properties files, CartServiceTest, UserServiceTest, OrderServiceTest, User, UserController, UserService, postman Collections, UserDto, pom. adds : UpdateUserRequest model, ImgDto. Deletes : ChangeRoleRequest model.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.error.whitelabel.enable=false
+server.error.whitelabel.enabled=false
 
 #Spring H2 settings
 spring.h2.console.enabled=true
@@ -11,4 +11,4 @@ spring.datasource.username=rajeh
 spring.datasource.password=
 spring.datasource.hikari.auto-commit=true
 
-Dspring.devtools.restart.enabled=false
+spring.devtools.restart.enabled=false
