--- a/src/test/resources/application-h2.properties
+++ b/src/test/resources/application-h2.properties
@@ -1,4 +1,4 @@
-server.error.whitelabel.enable=false
+server.error.whitelabel.enabled=false
 
 #Spring H2 settings
 spring.h2.console.enabled=true
@@ -11,5 +11,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.hikari.auto-commit=true
-
-Dspring.devtools.restart.enabled=false
+spring.devtools.restart.enabled=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
