updates order delete add logic to upload img(still not working yet)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.password=
 spring.datasource.hikari.auto-commit=true
 
 spring.devtools.restart.enabled=false
+
+saved.photos.path="C:/Users/Rajeh ABDULHADI/Desktop/pics"
