file upload is done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,8 @@ spring.datasource.password=
 spring.datasource.hikari.auto-commit=true
 
 spring.devtools.restart.enabled=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100000000KB
+spring.servlet.multipart.max-request-size=1000000000KB
 
-saved.photos.path="C:/Users/Rajeh ABDULHADI/Desktop/pics"
+saved.photos.path=C:/Users/Rajeh ABDULHADI/Desktop/pics
