--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+
 		<!--Persistency -->
 		<dependency>
 			<groupId>mysql</groupId>
