--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100000000KB
 spring.servlet.multipart.max-request-size=1000000000KB
 
-saved.photos.path=C:/Users/Rajeh ABDULHADI/Desktop/pics
+saved.photos.path=C:/Users/Rajeh ABDULHADI/git/rsd-movieshop-backend/src/main/resources/profileImgs/
