--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.h2.console.path=/h2-console
 
 #Spring JPA settings
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movies_shop
-spring.datasource.username=rajeh
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movieshop
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.hikari.auto-commit=true
 
 spring.devtools.restart.enabled=false
@@ -16,4 +16,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100000000KB
 spring.servlet.multipart.max-request-size=1000000000KB
 
-saved.photos.path=${user.home}/git/rsd-movieshop-backend/src/main/resources/profileImgs/
+saved.photos.path={classpath}/profileImgs/
