--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.error.whitelabel.enable=false
+server.error.whitelabel.enabled=false
 
 #Spring H2 settings
 spring.h2.console.enabled=true
@@ -7,8 +7,13 @@ spring.h2.console.path=/h2-console
 #Spring JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movieshop
-spring.datasource.username=root
-spring.datasource.password=$hini!
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.hikari.auto-commit=true
 
-Dspring.devtools.restart.enabled=false
+spring.devtools.restart.enabled=false
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=100000000KB
+spring.servlet.multipart.max-request-size=1000000000KB
+
+saved.photos.path=C:/
