--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.h2.console.path=/h2-console
 #Spring JPA settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/movieshop
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.hikari.auto-commit=true
 
 spring.devtools.restart.enabled=false
